--- a/data-overlay/package.json
+++ b/data-overlay/package.json
@@ -2,6 +2,10 @@
   "name": "data-overlay",
   "version": "0.1.0",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^1.11.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,5 +26,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@google/maps": "^1.1.3"
   }
 }
