--- a/data-overlay/package.json
+++ b/data-overlay/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.11.1",
     "react": "^16.13.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3"
   },
